--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,11 @@
       crossorigin="anonymous"
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
+    <script src="./app.js"></script>
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
+      <h1 class="mt-5" id="excuse">My dog eat my homework</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
         If this text is <b>not</b> centered and <b>yellow</b>, you probably have
